--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./src/style.css" />
     <title>Homepage</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="header">
+        <h1 id="welcome">WELCOME</h1>
+      </div>
+      <div class="about">
+        <h1 class="aboutMe">About Me</h1>
+      </div>
+    </div>
   </body>
 </html>
