--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       </div>
       <div class="about">
         <h1 class="aboutMe">About Me</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus consequatur harum facere voluptate fugit id nesciunt
+          officia voluptates numquam dolores. Voluptatum, sint. Sed ab
+          exercitationem molestiae magnam cum harum quibusdam?
+        </p>
       </div>
     </div>
   </body>
