add css to contact and added grid

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           exercitationem molestiae magnam cum harum quibusdam?
         </p>
       </div>
+      <div class="contact">
+        <h2 class="contact">Links to accounts</h2>
+      </div>
     </div>
   </body>
 </html>
