added clearer css to the homepage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         </p>
       </div>
       <div class="contact">
-        <h2 class="contact">Links to accounts</h2>
+        <h2 class="contactTitle">Links to accounts</h2>
+        <ul class="linkList">
+          <li><a href="">twitter</a></li>
+          <li><a href="">github</a></li>
+          <li><a href="">indeed</a></li>
+        </ul>
       </div>
     </div>
   </body>
