added social links to page that open new page

--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
       <div class="contact">
         <h2 class="contactTitle">Links to accounts</h2>
         <ul class="linkList">
-          <li><a href="">twitter</a></li>
-          <li><a href="">github</a></li>
-          <li><a href="">indeed</a></li>
+          <li>
+            <a href="https://twitter.com/EliNotElijah1" target="_blank"
+              >twitter</a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/EliCodes-UX" target="_blank">github</a>
+          </li>
+          <li>
+            <a href="https://profile.indeed.com/p/elib-m1wby2v" target="_blank"
+              >indeed</a
+            >
+          </li>
         </ul>
       </div>
     </div>
