added project to homepage

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
           </li>
         </ul>
       </div>
+      <div class="projects">
+        <div class="project"><h2>project 1</h2></div>
+        <div class="project"><h2>project 2</h2></div>
+        <div class="project"><h2>project 3</h2></div>
+        <div class="project"><h2>project 4</h2></div>
+        <div class="project"><h2>project 5</h2></div>
+        <div class="project"><h2>project 6</h2></div>
+      </div>
     </div>
   </body>
 </html>
